v1.3.0/_sources/sample_data/index.rst.txt
:orphan:



.. _sphx_glr_sample_data:

.. _sample_data:

Sample Data
===========

Verde provides some sample data and ways of generating synthetic data through
the :mod:`verde.datasets` module.

Where are my data files?
------------------------

The sample data files are downloaded automatically by :mod:`pooch` the first
time you load them. The files are saved to the default cache location on your
operating system. The location varies depending on your system and
configuration. We provide the :func:`verde.datasets.locate` function if you
need to find the data storage location on your system.

You can change the base data directory by setting the ``VERDE_DATA_DIR``
environment variable to the desired path.

Available datasets
------------------

These are the datasets currently available. Most also come with a companion
function for setting up a Cartopy map to display the data.



.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="We provide sample bathymetry data from Baja California to test the gridding methods. This is th...">

.. only:: html

 .. figure:: /sample_data/images/thumb/sphx_glr_baja_bathymetry_thumb.png

     :ref:`sphx_glr_sample_data_baja_bathymetry.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /sample_data/baja_bathymetry

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="We provide sample 3-component GPS velocity data from the West coast of the U.S. The data were c...">

.. only:: html

 .. figure:: /sample_data/images/thumb/sphx_glr_california_gps_thumb.png

     :ref:`sphx_glr_sample_data_california_gps.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /sample_data/california_gps

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The verde.datasets.CheckerBoard class generates synthetic data in a checkerboard pattern. It ha...">

.. only:: html

 .. figure:: /sample_data/images/thumb/sphx_glr_checkerboard_thumb.png

     :ref:`sphx_glr_sample_data_checkerboard.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /sample_data/checkerboard

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="    **The Rio magnetic anomaly dataset is deprecated and will be removed in     Verde v2.0.0** ...">

.. only:: html

 .. figure:: /sample_data/images/thumb/sphx_glr_rio_magnetic_thumb.png

     :ref:`sphx_glr_sample_data_rio_magnetic.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /sample_data/rio_magnetic

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is average wind speed and air temperature for data for the state of Texas, USA, on Februar...">

.. only:: html

 .. figure:: /sample_data/images/thumb/sphx_glr_texas-wind_thumb.png

     :ref:`sphx_glr_sample_data_texas-wind.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /sample_data/texas-wind
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
